Fix slider slection visiblity

--- a/functions/options/css/options.css
+++ b/functions/options/css/options.css
@@ -117,6 +117,11 @@
 .featured-cat, .rev_slider{
 	display: none;
 }
+
+.home_slider_{
+	display: none;
+}
+
 .show-in-table{
 	display: table-row;
 }
